[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://El3_PingPong.ogg" type="AudioStream" id=2]
[ext_resource path="res://Board.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]

script = ExtResource( 1 )

[node name="gui" type="MarginContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 92.0
margin_top = 298.0
margin_right = 297.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="WinBox" type="AcceptDialog" parent="gui" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 205.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "Fin de Partie"
resizable = false
dialog_text = "Le joueur a gagne"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog", "Pause", "Popup", "Visibility" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 2 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="start_pos" type="Node2D" parent="." index="2"]

position = Vector2( 549.779, 71.7595 )

[node name="Board" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 552.136, 314.411 )
scale = Vector2( 0.8, 0.8 )
_sections_unfolded = [ "Transform", "Z Index" ]

[connection signal="confirmed" from="gui/WinBox" to="." method="_on_WinBox_confirmed"]


